k8s/gitops/20-network/base/23-backend/ingress/allow-frontend-to-backend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: back

spec:
  endpointSelector:
    matchLabels:
      app: backend

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: front
            app: frontend
      toPorts:
        - ports:
            - port: "5001"
              protocol: TCP
